--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
   }
 
   td:first-child {
-    width: 40%; /* Установите необходимую ширину для первой колонки */
+    width: 20%; /* Установите необходимую ширину для первой колонки */
   }
 
   td {
-    height: 80px; /* Установите необходимую высоту для строк */
+    height: 60px; /* Установите необходимую высоту для строк */
   }
    
       .indented {
@@ -140,9 +140,9 @@
     <div class="inner-section">
        <h2>ABOUT ME</h2>
         <p class="indented">It's good to see you. My name is <em>Alexey</em>.</p>
-<p class="indented" style="text-align: justify;">I am a dentist specializing in orthopedics with over 20 years of experience. My expertise lies in aesthetic dental prosthetics, including implant-based procedures. I employ a comprehensive range of both modern and classical methods for dental prosthetics, utilizing technologies with proven effectiveness and a solid scientific foundation.</p>
+<p class="indented" style="text-align: justify;">I am a dentist specializing in orthopedics with <strong>over 20 years of experience</strong>strong>. My expertise lies in aesthetic dental prosthetics, including implant-based procedures. I employ a comprehensive range of both modern and classical methods for dental prosthetics, utilizing technologies with proven effectiveness and a solid scientific foundation.</p>
 <p class="indented" style="text-align: justify;">I collaborate with a team of specialists in various fields, including professional dental hygiene and teeth whitening, therapeutic dentistry (root canal treatment), surgery (bone and gum tissue plastic surgery, dental implant placement), and orthodontics (bite correction with braces and Invisalign).</p>
-<p class="indented" style="text-align: justify;">Our work is guided by principles of thorough diagnosis and preparation, precision, aesthetics, and reliability. We approach our patients with care and respect, acknowledging the trust they place in us with their health.</p>    
+<p class="indented" style="text-align: justify;">My work is guided by principles of thorough diagnosis and preparation, precision, aesthetics, and reliability. I approach mis patients with care and respect, acknowledging the trust they place in us with their health.</p>    
       </div>
     </section>
 
@@ -257,8 +257,9 @@ Prosthetics: Combining the Latest Technology and Years of Experience"</td>
     <td>Oct 2004 - Mart 2023</td>
     <td>
 Head doctor and prosthodontist
-Atri-Dent LLC, Moscow, Russia
-Skills: Dental Prosthetics on Dental Implants, Aesthetic Prosthetics with Ceramic Veneers and Inlays, Full Mouth Prosthetics, Patient Safety, Leadership, Healthcare Policy, Healthcare, Executive Management.</td>
+<p>Atri-Dent LLC, Moscow, Russia</p>
+<p>Dental Prosthetics on Dental Implants, Aesthetic Prosthetics with Ceramic Veneers and Inlays, Full Mouth Prosthetics, Patient Safety, Leadership, Healthcare Policy, Healthcare, Executive Management.</p>
+    </td>
   </tr>
 </table>
     </div>
