--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   }
 
   td {
-    height: 60px; /* Установите необходимую высоту для строк */
+    height: 40px; /* Установите необходимую высоту для строк */
   }
    
       .indented {
@@ -140,7 +140,7 @@
     <div class="inner-section">
        <h2>ABOUT ME</h2>
         <p class="indented">It's good to see you. My name is <em>Alexey</em>.</p>
-<p class="indented" style="text-align: justify;">I am a dentist specializing in orthopedics with <strong>over 20 years of experience</strong>strong>. My expertise lies in aesthetic dental prosthetics, including implant-based procedures. I employ a comprehensive range of both modern and classical methods for dental prosthetics, utilizing technologies with proven effectiveness and a solid scientific foundation.</p>
+<p class="indented" style="text-align: justify;">I am a dentist specializing in orthopedics with <strong>over 20 years of experience</strong>. My expertise lies in aesthetic dental prosthetics, including implant-based procedures. I employ a comprehensive range of both modern and classical methods for dental prosthetics, utilizing technologies with proven effectiveness and a solid scientific foundation.</p>
 <p class="indented" style="text-align: justify;">I collaborate with a team of specialists in various fields, including professional dental hygiene and teeth whitening, therapeutic dentistry (root canal treatment), surgery (bone and gum tissue plastic surgery, dental implant placement), and orthodontics (bite correction with braces and Invisalign).</p>
 <p class="indented" style="text-align: justify;">My work is guided by principles of thorough diagnosis and preparation, precision, aesthetics, and reliability. I approach mis patients with care and respect, acknowledging the trust they place in us with their health.</p>    
       </div>
