--- a/index.html
+++ b/index.html
@@ -152,11 +152,13 @@
      <table>
   <tr>
     <td>Jan 2012 - May 2012</td>
-    <td>Peoples’ Friendship University of Russia. Professional retraining in Healthcare Organization and Public Health.</td>
+    <td>Peoples’ Friendship University of Russia. 
+      <p>Professional retraining in Healthcare Organization and Public Health.</p></td>
   </tr>
   <tr>
     <td>Sep 1998 - Aug 2001</td>
-    <td>Chita State Medical Academy Chita State Medical Academy. PhD in Medical Sciences (Postgraduate Studies), Dentistry.</td>
+    <td>Chita State Medical Academy Chita State Medical Academy. 
+      <p>PhD in Medical Sciences (Postgraduate Studies), Dentistry.</p></td>
   </tr>
   </table>
        <h2>CERTIFICATES</h2>
