--- a/index.html
+++ b/index.html
@@ -151,14 +151,24 @@
       <h2>EDUCATION</h2>
      <table>
   <tr>
-    <td>Jan 2012 - May 2012</td>
+    <td>2012</td>
     <td>Peoples’ Friendship University of Russia. 
       <p>Professional retraining in Healthcare Organization and Public Health.</p></td>
   </tr>
   <tr>
-    <td>Sep 1998 - Aug 2001</td>
-    <td>Chita State Medical Academy Chita State Medical Academy. 
+    <td>1998 - 2001</td>
+    <td>Chita State Medical Academy. 
       <p>PhD in Medical Sciences (Postgraduate Studies), Dentistry.</p></td>
+  </tr>
+   <tr>
+    <td>1996 - 1998</td>
+    <td>Chita State Medical Academy. 
+      <p>Clinical Residency in Orthopedic Dentistry. Diploma in Orthopedic Dentistry</p></td>
+  </tr>
+  <tr>
+    <td>1991 - 1996</td>
+    <td>Chita State Medical Academy. 
+      <p>Diploma in Dentistry</p></td>
   </tr>
   </table>
        <h2>CERTIFICATES</h2>
