--- a/index.html
+++ b/index.html
@@ -153,22 +153,23 @@
   <tr>
     <td>2012</td>
     <td>Peoples’ Friendship University of Russia. 
-      <p>Professional retraining in Healthcare Organization and Public Health.</p></td>
+      <br>Professional retraining in Healthcare Organization and Public Health.</br></td>
   </tr>
   <tr>
     <td>1998 - 2001</td>
     <td>Chita State Medical Academy. 
-      <p>PhD in Medical Sciences (Postgraduate Studies), Dentistry.</p></td>
+      <br>PhD in Medical Sciences (Postgraduate Studies), Dentistry.</br>
   </tr>
    <tr>
     <td>1996 - 1998</td>
     <td>Chita State Medical Academy. 
-      <p>Clinical Residency in Orthopedic Dentistry. Diploma in Orthopedic Dentistry</p></td>
+      <br>Clinical Residency in Orthopedic Dentistry. Diploma in Orthopedic Dentistry</br>
   </tr>
   <tr>
     <td>1991 - 1996</td>
     <td>Chita State Medical Academy. 
-      <p>Diploma in Dentistry</p></td>
+      <br>Diploma in Dentistry</br>
+     </td>
   </tr>
   </table>
        <h2>CERTIFICATES</h2>
@@ -266,11 +267,18 @@ Prosthetics: Combining the Latest Technology and Years of Experience"</td>
      <h2>EXPERIENCE</h2>
 <table>
   <tr>
-    <td>Oct 2004 - Mart 2023</td>
+    <td>2003 - 2023</td>
     <td>
-Head doctor and prosthodontist
-<p>Atri-Dent LLC, Moscow, Russia</p>
+<br>Head doctor and prosthodontist</br>
+<br>Atri-Dent LLC, Moscow, Russia</br>
 <p>Dental Prosthetics on Dental Implants, Aesthetic Prosthetics with Ceramic Veneers and Inlays, Full Mouth Prosthetics, Patient Safety, Leadership, Healthcare Policy, Healthcare, Executive Management.</p>
+    </td>
+  </tr>
+   <tr>
+    <td>2001 - 2003</td>
+    <td>
+Dentist
+<p>Chita State Medical Academy</p>
     </td>
   </tr>
 </table>
