--- a/index.html
+++ b/index.html
@@ -147,27 +147,50 @@
     </section>
 
   <section class="gray-section">
-     <div class="inner-section">
+    <div class="inner-section">
+     <h2>EXPERIENCE</h2>
+<table>
+  <tr>
+    <td>2003 - 2023</td>
+    <td>
+<strong>Head doctor and prosthodontist</strong>
+<br>Atri-Dent LLC, Moscow, Russia</br>
+<p>Dental Prosthetics on Dental Implants, Aesthetic Prosthetics with Ceramic Veneers and Inlays, Full Mouth Prosthetics, Patient Safety, Leadership, Healthcare Policy, Healthcare, Executive Management.</p>
+    </td>
+  </tr>
+   <tr>
+    <td>2001 - 2003</td>
+    <td>
+<strong>Dentist</strong>
+<p>Chita State Medical Academy</p>
+    </td>
+  </tr>
+</table>
+    </div> 
+</section>
+
+  <section>
+    <div class="inner-section">
       <h2>EDUCATION</h2>
      <table>
   <tr>
     <td>2012</td>
-    <td>Peoples’ Friendship University of Russia. 
-      <br>Professional retraining in Healthcare Organization and Public Health.</br></td>
+    <td><strong>Peoples’ Friendship University of Russia</strong>
+      <br>Professional retraining in Healthcare Organization and Public Health</br></td>
   </tr>
   <tr>
     <td>1998 - 2001</td>
-    <td>Chita State Medical Academy. 
-      <br>PhD in Medical Sciences (Postgraduate Studies), Dentistry.</br>
+    <td><strong>Chita State Medical Academy</strong>
+      <br>PhD in Medical Sciences (Postgraduate Studies), Dentistry</br>
   </tr>
    <tr>
     <td>1996 - 1998</td>
-    <td>Chita State Medical Academy. 
+    <td><strong>Chita State Medical Academy</strong>
       <br>Clinical Residency in Orthopedic Dentistry. Diploma in Orthopedic Dentistry</br>
   </tr>
   <tr>
     <td>1991 - 1996</td>
-    <td>Chita State Medical Academy. 
+    <td><strong>Chita State Medical Academyv</strong>
       <br>Diploma in Dentistry</br>
      </td>
   </tr>
@@ -262,33 +285,9 @@ Prosthetics: Combining the Latest Technology and Years of Experience"</td>
     </div>
   </section>
 
-  <section>
-    <div class="inner-section">
-     <h2>EXPERIENCE</h2>
-<table>
-  <tr>
-    <td>2003 - 2023</td>
-    <td>
-<br>Head doctor and prosthodontist</br>
-<br>Atri-Dent LLC, Moscow, Russia</br>
-<p>Dental Prosthetics on Dental Implants, Aesthetic Prosthetics with Ceramic Veneers and Inlays, Full Mouth Prosthetics, Patient Safety, Leadership, Healthcare Policy, Healthcare, Executive Management.</p>
-    </td>
-  </tr>
-   <tr>
-    <td>2001 - 2003</td>
-    <td>
-Dentist
-<p>Chita State Medical Academy</p>
-    </td>
-  </tr>
-</table>
-    </div>
-  </section>
-
- <section class="gray-section">
-     <div class="inner-section">  
- <h2>CONTACT</h2>
-      <table style="width: 100%; border-collapse: collapse;">
+  <footer>
+    <div class="inner-section">  
+  <table style="width: 100%; border-collapse: collapse;">
   <tr>
     <td style="text-align: center; padding: 5px; font-family: 'Roboto'; font-weight: 300;">msd2526@gmail.com</td>
     <td style="text-align: center; padding: 5px; font-family: 'Roboto'; font-weight: 300;">+34(645)51-65-68</td>
@@ -296,12 +295,6 @@ Dentist
   </tr>
        </table>
      </div>
-  </section>
-
-  <footer>
-    <div class="inner-section">
-      <!>
-    </div>
   </footer>
 </body>
 </html>
