--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     }
 
     footer {
+      background-color: #F5F8FA;
       width: 100%;
       border-top: 1px solid #D6D9DB;
       padding: 20px 0;
