--- a/index_es.html
+++ b/index_es.html
@@ -138,31 +138,32 @@
 
   <section>
     <div class="inner-section">
-       <h2>ABOUT ME</h2>
-        <p class="indented">It's good to see you. My name is <em>Alexey</em>.</p>
-<p class="indented" style="text-align: justify;">I am a dentist specializing in orthopedics with <strong>over 20 years of experience</strong>. My expertise lies in aesthetic dental prosthetics, including implant-based procedures. I employ a comprehensive range of both modern and classical methods for dental prosthetics, utilizing technologies with proven effectiveness and a solid scientific foundation.</p>
-<p class="indented" style="text-align: justify;">I collaborate with a team of specialists in various fields, including professional dental hygiene and teeth whitening, therapeutic dentistry (root canal treatment), surgery (bone and gum tissue plastic surgery, dental implant placement), and orthodontics (bite correction with braces and Invisalign).</p>
-<p class="indented" style="text-align: justify;">In my practice, I adhere to the principles of thorough diagnosis, meticulous preparation, precision, aesthetics, and reliability. I approach patients with care and respect, understanding that they entrust me with their health.</p>    
+       <h2>SOBRE MÍ</h2>
+        <p class="indented">Es un placer saludarte. Mi nombre es <em>Alexey</em>.</p>
+<p class="indented" style="text-align: justify;">Soy un dentista especializado en ortopedia con <strong>más de 20 años de experiencia</strong>. Mi especialidad se encuentra en la prótesis dental estética, incluidos los procedimientos basados en implantes. Empleo una amplia gama de métodos tanto modernos como clásicos para la prótesis dental, utilizando tecnologías con eficacia comprobada y una sólida base científica.</p>
+<p class="indented" style="text-align: justify;">Colaboro con un equipo de especialistas en diversas áreas, incluyendo higiene dental profesional y blanqueamiento dental, odontología terapéutica (tratamiento de conductos), cirugía (cirugía plástica de tejido óseo y de encías, colocación de implantes dentales) y ortodoncia (corrección de mordida con brackets e Invisalign).</p>
+<p class="indented" style="text-align: justify;">En mi práctica, me guío por los principios de diagnóstico minucioso, preparación meticulosa, precisión, estética y confiabilidad. Me acerco a los pacientes con cuidado y respeto, comprendiendo que me confían su salud.</p>    
+<p class="indented" style="text-align: justify;">Tengo competencia en <em>inglés a nivel B1</em> y en <em>español en los niveles B1-B2.</em></p>    
     </div>
     </section>
 
   <section class="gray-section">
     <div class="inner-section">
-     <h2>EXPERIENCE</h2>
+     <h2>EXPERIENCIA</h2>
 <table>
   <tr>
     <td>2003 - 2023</td>
     <td>
-<strong>Head doctor and prosthodontist</strong>
-<br>Atri-Dent LLC, Moscow, Russia</br>
-<p>Dental Prosthetics on Dental Implants, Aesthetic Prosthetics with Ceramic Veneers and Inlays, Full Mouth Prosthetics, Patient Safety, Leadership, Healthcare Policy, Healthcare, Executive Management.</p>
+      <strong>Jefe de médicos y prostodoncista</strong>
+      <br>Atri-Dent LLC, Moscú, Rusia</br>
+      <p>Prótesis dental en implantes dentales, prótesis estéticas con carillas e incrustaciones cerámicas, prótesis completa, seguridad del paciente, liderazgo, política de salud, atención médica, dirección ejecutiva.</p>
     </td>
   </tr>
-   <tr>
+  <tr>
     <td>2001 - 2003</td>
     <td>
-<strong>Dentist</strong>
-<p>Chita State Medical Academy</p>
+      <strong>Dentista</strong>
+      <p>Academia Médica Estatal de Chita</p>
     </td>
   </tr>
 </table>
@@ -171,117 +172,116 @@
 
   <section>
     <div class="inner-section">
-      <h2>EDUCATION</h2>
-     <table>
+      <h2>EDUCACIÓN</h2>
+<table>
   <tr>
     <td>2012</td>
-    <td><strong>Peoples’ Friendship University of Russia</strong>
-      <br>Professional retraining in Healthcare Organization and Public Health</br></td>
+    <td>
+      <strong>Universidad de la Amistad de los Pueblos de Rusia</strong>
+      <br>Reentrenamiento profesional en Organización de la Atención Médica y Salud Pública</br>
+    </td>
   </tr>
   <tr>
     <td>1998 - 2001</td>
-    <td><strong>Chita State Medical Academy</strong>
-      <br>PhD in Medical Sciences (Postgraduate Studies), Dentistry</br>
+    <td>
+      <strong>Academia Médica Estatal de Chita</strong>
+      <br>Doctor en Ciencias Médicas (Estudios de Postgrado), Odontología</br>
+    </td>
   </tr>
-   <tr>
+  <tr>
     <td>1996 - 1998</td>
-    <td><strong>Chita State Medical Academy</strong>
-      <br>Clinical Residency in Orthopedic Dentistry. Diploma in Orthopedic Dentistry</br>
+    <td>
+      <strong>Academia Médica Estatal de Chita</strong>
+      <br>Residencia Clínica en Odontología Ortopédica. Diploma en Odontología Ortopédica</br>
+    </td>
   </tr>
   <tr>
     <td>1991 - 1996</td>
-    <td><strong>Chita State Medical Academyv</strong>
-      <br>Diploma in Dentistry</br>
-     </td>
+    <td>
+      <strong>Academia Médica Estatal de Chita</strong>
+      <br>Diploma en Odontología</br>
+    </td>
   </tr>
-  </table>
-       <h2>CERTIFICATES</h2>
-     <table>
+</table>
+       <h2>CERTIFICADOS</h2>
+<table>
   <tr>
     <td>2022</td>
-    <td>Certificate of participant in the course "Digital aesthetic functional rehabilitation: prosthetics,
-implantation, orthodontics"</td>
+    <td>Certificado de participación en el curso "Rehabilitación funcional estética digital: prótesis, implantología, ortodoncia"</td>
   </tr>
   <tr>
     <td>2021</td>
-    <td>Certificate of participation in the lecture course "Survivors. Mixed Intake Protocols."</td>
+    <td>Certificado de participación en el curso de conferencias "Sobrevivientes. Protocolos de ingreso mixtos."</td>
   </tr>
   <tr>
     <td>2021</td>
-    <td>Certificate of participant in the course "Prosthetics on Ankylos implants. TiBase.
-BalanceBase/ SmartFix concept"</td>
+    <td>Certificado de participación en el curso "Prótesis sobre implantes Ankylos. TiBase. Concepto BalanceBase/SmartFix"</td>
   </tr>
-   <tr>
+  <tr>
     <td>2020</td>
-    <td>Participant Certificate for the seminar "How to Become Number 1 in Management"</td>
+    <td>Certificado de participación en el seminario "Cómo convertirse en el número 1 en gestión"</td>
   </tr>
-   <tr>
+  <tr>
     <td>2019</td>
-    <td>Certificate of participation in "Mastering Prosthodontics" course</td>
+    <td>Certificado de participación en el curso "Dominando la Prostodoncia"</td>
   </tr>
-   <tr>
+  <tr>
     <td>2018</td>
-    <td>Certificate of participation in "Creating a New Smile: From Planning to Fixation" course</td>
+    <td>Certificado de participación en el curso "Creando una nueva sonrisa: desde la planificación hasta la fijación"</td>
   </tr>
-   <tr>
+  <tr>
     <td>2018</td>
-    <td>Certificate of participation in "Splint Therapy in Dentistry" course</td>
+    <td>Certificado de participación en el curso "Terapia de férulas en odontología"</td>
   </tr>
- <tr>
+  <tr>
     <td>2018</td>
-    <td>Certificate of participation in the course "Factors of Orthopaedic Structures Selection"</td>
+    <td>Certificado de participación en el curso "Factores de selección de estructuras ortopédicas"</td>
   </tr>
- <tr>
+  <tr>
     <td>2018</td>
-    <td>Certificate of Attendance in "Effectiveness of the Initial Consultation and Treatment Plan
-Re-presentation Protocol" course</td>
+    <td>Certificado de asistencia en el curso "Efectividad de la consulta inicial y protocolo de presentación del plan de tratamiento"</td>
   </tr>
-<tr>
+  <tr>
     <td>2017</td>
-    <td>Certificate of participation in the course "DSD. Digital Integration."</td>
+    <td>Certificado de participación en el curso "DSD. Integración digital"</td>
   </tr>
-<tr>
+  <tr>
     <td>2017</td>
-    <td>Certificate of participation in the course "Articulation System in the Daily Practice of the
-Orthopedic Physician and Dental Technician. Solving Occlusal Problems."</td>
+    <td>Certificado de participación en el curso "Sistema de articulación en la práctica diaria del médico ortopédico y el técnico dental. Solución de problemas oclusales"</td>
   </tr>
-<tr>
+  <tr>
     <td>2016</td>
-    <td>Certificate of Participation in the course "Caps and Basic Principles of the Treatment of
-Masseter Dysfunction"</td>
+    <td>Certificado de participación en el curso "Gorras y principios básicos del tratamiento de la disfunción del masetero"</td>
   </tr>
-<tr>
+  <tr>
     <td>2016</td>
-    <td>Participant certificate for "Planning and preparation" course</td>
+    <td>Certificado de participación en el curso "Planificación y preparación"</td>
   </tr>
-<tr>
+  <tr>
     <td>2016</td>
-    <td>Certificate of participation in the course "Problems of occlusal loads on orthopedic
-components"</td>
+    <td>Certificado de participación en el curso "Problemas de cargas oclusales en componentes ortopédicos"</td>
   </tr>
-<tr>
+  <tr>
     <td>2016</td>
-    <td>Certificate of participant in the course "Comprehensive methodology of a private dental
-clinic"</td>
+    <td>Certificado de participación en el curso "Metodología integral de una clínica dental privada"</td>
   </tr>
-<tr>
+  <tr>
     <td>2015</td>
-    <td>Participant certificate for "Legal regulation of dental clinic" course</td>
+    <td>Certificado de asistencia al curso "Regulación legal de la clínica dental"</td>
   </tr>
-<tr>
+  <tr>
     <td>2015</td>
-    <td>Participant certificate for "Reconstructing a Smile" course</td>
+    <td>Certificado de asistencia al curso "Reconstruyendo una sonrisa"</td>
   </tr>
-<tr>
+  <tr>
     <td>2015</td>
-    <td>Certificate of participation in "Quintessence" course</td>
+    <td>Certificado de participación en el curso "Quintessence"</td>
   </tr>
-<tr>
+  <tr>
     <td>2014</td>
-    <td>Certificate of participation in the course "Frankfurt University Protocols for Implant
-Prosthetics: Combining the Latest Technology and Years of Experience"</td>
+    <td>Certificado de participación en el curso "Protocolos de la Universidad de Frankfurt para la prostodoncia de implantes: combinando la última tecnología y años de experiencia"</td>
   </tr>
-  </table>
+</table>
     </div>
   </section>
 
