--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <p class="indented" style="text-align: justify;">I am a dentist specializing in orthopedics with <strong>over 20 years of experience</strong>. My expertise lies in aesthetic dental prosthetics, including implant-based procedures. I employ a comprehensive range of both modern and classical methods for dental prosthetics, utilizing technologies with proven effectiveness and a solid scientific foundation.</p>
 <p class="indented" style="text-align: justify;">I collaborate with a team of specialists in various fields, including professional dental hygiene and teeth whitening, therapeutic dentistry (root canal treatment), surgery (bone and gum tissue plastic surgery, dental implant placement), and orthodontics (bite correction with braces and Invisalign).</p>
 <p class="indented" style="text-align: justify;">In my practice, I adhere to the principles of thorough diagnosis, meticulous preparation, precision, aesthetics, and reliability. I approach patients with care and respect, understanding that they entrust me with their health.</p>    
-<p class="indented" style="text-align: justify;">I have proficiency in <em>English at level B1</em> and in <em>Spanish at levels B1-B2.</em></p>  
+<p class="indented" style="text-align: justify;">I have proficiency <em>in English at level B1 and in Spanish at levels B1-B2.</em></p>  
     </div>
     </section>
 
