--- a/index_es.html
+++ b/index_es.html
@@ -143,7 +143,7 @@
 <p class="indented" style="text-align: justify;">Soy un dentista especializado en ortopedia con <strong>más de 20 años de experiencia</strong>. Mi especialidad se encuentra en la prótesis dental estética, incluidos los procedimientos basados en implantes. Empleo una amplia gama de métodos tanto modernos como clásicos para la prótesis dental, utilizando tecnologías con eficacia comprobada y una sólida base científica.</p>
 <p class="indented" style="text-align: justify;">Colaboro con un equipo de especialistas en diversas áreas, incluyendo higiene dental profesional y blanqueamiento dental, odontología terapéutica (tratamiento de conductos), cirugía (cirugía plástica de tejido óseo y de encías, colocación de implantes dentales) y ortodoncia (corrección de mordida con brackets e Invisalign).</p>
 <p class="indented" style="text-align: justify;">En mi práctica, me guío por los principios de diagnóstico minucioso, preparación meticulosa, precisión, estética y confiabilidad. Me acerco a los pacientes con cuidado y respeto, comprendiendo que me confían su salud.</p>    
-<p class="indented" style="text-align: justify;">Tengo competencia <em>en inglés a nivel B1 y en español en los niveles B1-B2.</em></p>    
+<p class="indented" style="text-align: justify;"><em>Tengo competencia en inglés a nivel B1 y en español en los niveles B1-B2.</em></p>    
     </div>
     </section>
 
