--- a/index_es.html
+++ b/index_es.html
@@ -207,81 +207,89 @@
 <table>
   <tr>
     <td>2022</td>
-    <td>Certificado de participación en el curso "Rehabilitación funcional estética digital: prótesis, implantología, ortodoncia"</td>
+    <td>Certificate of participant in the course "Digital aesthetic functional rehabilitation: prosthetics,
+implantation, orthodontics"</td>
   </tr>
   <tr>
     <td>2021</td>
-    <td>Certificado de participación en el curso de conferencias "Sobrevivientes. Protocolos de ingreso mixtos."</td>
+    <td>Certificate of participation in the lecture course "Survivors. Mixed Intake Protocols."</td>
   </tr>
   <tr>
     <td>2021</td>
-    <td>Certificado de participación en el curso "Prótesis sobre implantes Ankylos. TiBase. Concepto BalanceBase/SmartFix"</td>
+    <td>Certificate of participant in the course "Prosthetics on Ankylos implants. TiBase.
+BalanceBase/ SmartFix concept"</td>
   </tr>
-  <tr>
+   <tr>
     <td>2020</td>
-    <td>Certificado de participación en el seminario "Cómo convertirse en el número 1 en gestión"</td>
+    <td>Participant Certificate for the seminar "How to Become Number 1 in Management"</td>
   </tr>
-  <tr>
+   <tr>
     <td>2019</td>
-    <td>Certificado de participación en el curso "Dominando la Prostodoncia"</td>
+    <td>Certificate of participation in "Mastering Prosthodontics" course</td>
   </tr>
-  <tr>
+   <tr>
     <td>2018</td>
-    <td>Certificado de participación en el curso "Creando una nueva sonrisa: desde la planificación hasta la fijación"</td>
+    <td>Certificate of participation in "Creating a New Smile: From Planning to Fixation" course</td>
   </tr>
-  <tr>
+   <tr>
     <td>2018</td>
-    <td>Certificado de participación en el curso "Terapia de férulas en odontología"</td>
+    <td>Certificate of participation in "Splint Therapy in Dentistry" course</td>
   </tr>
-  <tr>
+ <tr>
     <td>2018</td>
-    <td>Certificado de participación en el curso "Factores de selección de estructuras ortopédicas"</td>
+    <td>Certificate of participation in the course "Factors of Orthopaedic Structures Selection"</td>
   </tr>
-  <tr>
+ <tr>
     <td>2018</td>
-    <td>Certificado de asistencia en el curso "Efectividad de la consulta inicial y protocolo de presentación del plan de tratamiento"</td>
+    <td>Certificate of Attendance in "Effectiveness of the Initial Consultation and Treatment Plan
+Re-presentation Protocol" course</td>
   </tr>
-  <tr>
+<tr>
     <td>2017</td>
-    <td>Certificado de participación en el curso "DSD. Integración digital"</td>
+    <td>Certificate of participation in the course "DSD. Digital Integration."</td>
   </tr>
-  <tr>
+<tr>
     <td>2017</td>
-    <td>Certificado de participación en el curso "Sistema de articulación en la práctica diaria del médico ortopédico y el técnico dental. Solución de problemas oclusales"</td>
+    <td>Certificate of participation in the course "Articulation System in the Daily Practice of the
+Orthopedic Physician and Dental Technician. Solving Occlusal Problems."</td>
   </tr>
-  <tr>
+<tr>
     <td>2016</td>
-    <td>Certificado de participación en el curso "Gorras y principios básicos del tratamiento de la disfunción del masetero"</td>
+    <td>Certificate of Participation in the course "Caps and Basic Principles of the Treatment of
+Masseter Dysfunction"</td>
   </tr>
-  <tr>
+<tr>
     <td>2016</td>
-    <td>Certificado de participación en el curso "Planificación y preparación"</td>
+    <td>Participant certificate for "Planning and preparation" course</td>
   </tr>
-  <tr>
+<tr>
     <td>2016</td>
-    <td>Certificado de participación en el curso "Problemas de cargas oclusales en componentes ortopédicos"</td>
+    <td>Certificate of participation in the course "Problems of occlusal loads on orthopedic
+components"</td>
   </tr>
-  <tr>
+<tr>
     <td>2016</td>
-    <td>Certificado de participación en el curso "Metodología integral de una clínica dental privada"</td>
+    <td>Certificate of participant in the course "Comprehensive methodology of a private dental
+clinic"</td>
   </tr>
-  <tr>
+<tr>
     <td>2015</td>
-    <td>Certificado de asistencia al curso "Regulación legal de la clínica dental"</td>
+    <td>Participant certificate for "Legal regulation of dental clinic" course</td>
   </tr>
-  <tr>
+<tr>
     <td>2015</td>
-    <td>Certificado de asistencia al curso "Reconstruyendo una sonrisa"</td>
+    <td>Participant certificate for "Reconstructing a Smile" course</td>
   </tr>
-  <tr>
+<tr>
     <td>2015</td>
-    <td>Certificado de participación en el curso "Quintessence"</td>
+    <td>Certificate of participation in "Quintessence" course</td>
   </tr>
-  <tr>
+<tr>
     <td>2014</td>
-    <td>Certificado de participación en el curso "Protocolos de la Universidad de Frankfurt para la prostodoncia de implantes: combinando la última tecnología y años de experiencia"</td>
+    <td>Certificate of participation in the course "Frankfurt University Protocols for Implant
+Prosthetics: Combining the Latest Technology and Years of Experience"</td>
   </tr>
-</table>
+  </table>
     </div>
   </section>
 
