--- a/index.html
+++ b/index.html
@@ -156,7 +156,17 @@
     <td>
 <strong>Head doctor and prosthodontist</strong>
 <br>Atri-Dent LLC, Moscow, Russia</br>
-<p>Dental Prosthetics on Dental Implants, Aesthetic Prosthetics with Ceramic Veneers and Inlays, Full Mouth Prosthetics, Patient Safety, Leadership, Healthcare Policy, Healthcare, Executive Management.</p>
+<p>eMAX veneers, both finished and full (360 veneers)</p>
+Refractory Noritake veneers
+<br>eMAX ceramic inlays and onlays ("inley," "onley," "overley," and "pinley")</br>
+<br>eMAX ceramic crowns and bridges (semi-crowns and full crowns)</br>
+<br>Zirconium dioxide – culted post inlays, crowns, and bridge prosthetics</br>
+<br>Classic metal-ceramic crowns and bridge prosthetics</br>
+<br>Fixed and removable prosthetics on dental implants</br>
+<br>Various clasp prosthetics – with locks, classic, splinting</br>
+<br>Partial and full removable prosthetics, including those supported by implants</br>
+<br>Conditionally removable prosthetics on implants according to the "All on 4" and "All on 6" systems</br>
+<br>Temporary and permanent prosthetics on Astra Tech, MIS, Alpha Bio, Xive implants</br>
     </td>
   </tr>
    <tr>
