--- a/index.html
+++ b/index.html
@@ -152,21 +152,21 @@
      <h2>EXPERIENCE</h2>
 <table>
   <tr>
-    <td>2003 - 2023</td>
+    <td valign="top">2003 - 2023</td>
     <td>
 <strong>Head doctor and prosthodontist</strong>
 <br>Atri-Dent LLC, Moscow, Russia</br>
-<p style="margin-bottom: 0.5em;">eMAX veneers, both finished and full (360 veneers)</p>
-<p style="margin-bottom: 0.5em;">Refractory Noritake veneers</p>
-<p style="margin-bottom: 0.5em;">>eMAX ceramic inlays and onlays ("inley," "onley," "overley," and "pinley")</p>
-<p style="margin-bottom: 0.5em;">eMAX ceramic crowns and bridges (semi-crowns and full crowns)</p>
-<p style="margin-bottom: 0.5em;">Zirconium dioxide – culted post inlays, crowns, and bridge prosthetics</p>
-<p style="margin-bottom: 0.5em;">Classic metal-ceramic crowns and bridge prosthetics</p>
-<p style="margin-bottom: 0.5em;">Fixed and removable prosthetics on dental implants</p>
-<p style="margin-bottom: 0.5em;">Various clasp prosthetics – with locks, classic, splinting</p>
-<p style="margin-bottom: 0.5em;">Partial and full removable prosthetics, including those supported by implants</p>
-<p style="margin-bottom: 0.5em;">Conditionally removable prosthetics on implants according to the "All on 4" and "All on 6" systems</p>
-<p style="margin-bottom: 0.5em;">Temporary and permanent prosthetics on Astra Tech, MIS, Alpha Bio, Xive implants</p>
+eMAX veneers, both finished and full (360 veneers)<br>
+Refractory Noritake veneers<br>
+eMAX ceramic inlays and onlays ("inley," "onley," "overley," and "pinley")<br>
+eMAX ceramic crowns and bridges (semi-crowns and full crowns)<br>
+Zirconium dioxide – culted post inlays, crowns, and bridge prosthetics<br>
+Classic metal-ceramic crowns and bridge prosthetics<br>
+Fixed and removable prosthetics on dental implants<br>
+Various clasp prosthetics – with locks, classic, splinting<br>
+Partial and full removable prosthetics, including those supported by implants<br>
+Conditionally removable prosthetics on implants according to the "All on 4" and "All on 6" systems<br>
+Temporary and permanent prosthetics on Astra Tech, MIS, Alpha Bio, Xive implants<br>
     </td>
   </tr>
    <tr>
