--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <td valign="top">2003 - 2023</td>
     <td>
 <strong>Head doctor and prosthodontist</strong>
-<br>Atri-Dent LLC, Moscow, Russia</br>
+<p>Atri-Dent LLC, Moscow, Russia</p>
 eMAX veneers, both finished and full (360 veneers)<br>
 Refractory Noritake veneers<br>
 eMAX ceramic inlays and onlays ("inley," "onley," "overley," and "pinley")<br>
@@ -170,7 +170,7 @@ Temporary and permanent prosthetics on Astra Tech, MIS, Alpha Bio, Xive implants
     </td>
   </tr>
    <tr>
-    <td>2001 - 2003</td>
+    <td valign="top">2001 - 2003</td>
     <td>
 <strong>Dentist</strong>
 <p>Chita State Medical Academy</p>
