--- a/index_es.html
+++ b/index_es.html
@@ -152,15 +152,25 @@
      <h2>EXPERIENCIA</h2>
 <table>
   <tr>
-    <td>2003 - 2023</td>
+    <td valign="top">2003 - 2023</td>
     <td>
       <strong>Jefe de médicos y prostodoncista</strong>
-      <br>Atri-Dent LLC, Moscú, Rusia</br>
-      <p>Prótesis dental en implantes dentales, prótesis estéticas con carillas e incrustaciones cerámicas, prótesis completa, seguridad del paciente, liderazgo, política de salud, atención médica, dirección ejecutiva.</p>
+      <p>Atri-Dent LLC, Moscú, Rusia</p>
+      Carillas eMAX, tanto terminadas como completas (360 carillas)<br>
+Carillas refractarias Noritake<br>
+Incrustaciones y onlays cerámicos eMAX ("inley," "onley," "overley," y "pinley")<br>
+Coronas y puentes cerámicos eMAX (coronas semi y coronas completas)<br>
+Óxido de circonio: incrustaciones de postes cultados, coronas y prótesis de puente<br>
+Coronas y prótesis de puente metal-cerámicas clásicas<br>
+Prótesis fijas y removibles sobre implantes dentales<br>
+Diversas prótesis de sujeción: con cierres, clásicas, de férula<br>
+Prótesis removibles parciales y completas, incluidas aquellas con soporte en implantes<br>
+Prótesis removibles condicionalmente sobre implantes según los sistemas "All on 4" y "All on 6"<br>
+Prótesis temporales y permanentes sobre implantes Astra Tech, MIS, Alpha Bio, Xive<br>
     </td>
   </tr>
   <tr>
-    <td>2001 - 2003</td>
+    <td valign="top">2001 - 2003</td>
     <td>
       <strong>Dentista</strong>
       <p>Academia Médica Estatal de Chita</p>
