--- a/index_es.html
+++ b/index_es.html
@@ -185,28 +185,28 @@ Prótesis temporales y permanentes sobre implantes Astra Tech, MIS, Alpha Bio, X
       <h2>EDUCACIÓN</h2>
 <table>
   <tr>
-    <td>2012</td>
+    <td valign="top"2012</td>
     <td>
       <strong>Universidad de la Amistad de los Pueblos de Rusia</strong>
       <br>Reentrenamiento profesional en Organización de la Atención Médica y Salud Pública</br>
     </td>
   </tr>
   <tr>
-    <td>1998 - 2001</td>
+    <td valign="top"1998 - 2001</td>
     <td>
       <strong>Academia Médica Estatal de Chita</strong>
       <br>Doctor en Ciencias Médicas (Estudios de Postgrado), Odontología</br>
     </td>
   </tr>
   <tr>
-    <td>1996 - 1998</td>
+    <td valign="top"1996 - 1998</td>
     <td>
       <strong>Academia Médica Estatal de Chita</strong>
       <br>Residencia Clínica en Odontología Ortopédica. Diploma en Odontología Ortopédica</br>
     </td>
   </tr>
   <tr>
-    <td>1991 - 1996</td>
+    <td valign="top"1991 - 1996</td>
     <td>
       <strong>Academia Médica Estatal de Chita</strong>
       <br>Diploma en Odontología</br>
