--- a/index.html
+++ b/index.html
@@ -185,22 +185,22 @@ Temporary and permanent prosthetics on Astra Tech, MIS, Alpha Bio, Xive implants
       <h2>EDUCATION</h2>
      <table>
   <tr>
-    <td>2012</td>
+    <td valign="top"2012</td>
     <td><strong>Peoples’ Friendship University of Russia</strong>
       <br>Professional retraining in Healthcare Organization and Public Health</br></td>
   </tr>
   <tr>
-    <td>1998 - 2001</td>
+    <td valign="top"1998 - 2001</td>
     <td><strong>Chita State Medical Academy</strong>
       <br>PhD in Medical Sciences (Postgraduate Studies), Dentistry</br>
   </tr>
    <tr>
-    <td>1996 - 1998</td>
+    <td valign="top"1996 - 1998</td>
     <td><strong>Chita State Medical Academy</strong>
       <br>Clinical Residency in Orthopedic Dentistry. Diploma in Orthopedic Dentistry</br>
   </tr>
   <tr>
-    <td>1991 - 1996</td>
+    <td valign="top"1991 - 1996</td>
     <td><strong>Chita State Medical Academyv</strong>
       <br>Diploma in Dentistry</br>
      </td>
