--- a/index_es.html
+++ b/index_es.html
@@ -143,7 +143,7 @@
 <p class="indented" style="text-align: justify;">Soy un dentista especializado en odontología ortopédica con <strong>más de 20 años de experiencia</strong>. Tengo un doctorado en medicina. Mi especialidad se encuentra en la prótesis dental estética, incluidos los procedimientos basados en implantes. Utilizo una amplia gama de métodos tanto modernos como clásicos para la prótesis dental, empleando tecnologías con eficacia comprobada y una sólida base científica.</p>
 <p class="indented" style="text-align: justify;">Colaboro con un equipo de especialistas en diversas áreas, que incluyen higiene dental profesional y blanqueamiento dental, odontología terapéutica (tratamiento de conductos), cirugía (cirugía plástica de tejido óseo y encías, colocación de implantes dentales) y ortodoncia (corrección de la mordida con brackets e Invisalign).</p>
 <p class="indented" style="text-align: justify;">En mi práctica, me adhiero a los principios de un diagnóstico minucioso, preparación meticulosa, precisión, estética y confiabilidad. Me acerco a los pacientes con cuidado y respeto, entendiendo que me confían su salud.</p>
-<p class="indented" style="text-align: justify;"><em>Tengo competencia en inglés a nivel B1 y en español en los niveles B1-B2.</em></p>
+<p class="indented" style="text-align: justify;"><em>Tengo competencia en inglés a nivel B1 y en español en a nivel B1.</em></p>
     </div>
     </section>
 
@@ -154,7 +154,7 @@
   <tr>
     <td valign="top">2003 - 2023</td>
     <td>
-      <strong>Jefe de médicos y prostodoncista</strong>
+      <strong>Jefe de médicos y dentista ortopédico</strong>
       <p>Atri-Dent LLC, Moscú, Rusia</p>
       Carillas eMAX, tanto terminadas como completas (360 carillas)<br>
 Carillas refractarias Noritake<br>
@@ -172,7 +172,7 @@ Prótesis temporales y permanentes sobre implantes Astra Tech, MIS, Alpha Bio, X
   <tr>
     <td valign="top">2001 - 2003</td>
     <td>
-      <strong>Dentista</strong>
+      <strong>Dentista ortopédico</strong>
       <p>Academia Médica Estatal de Chita</p>
     </td>
   </tr>
