--- a/index_es.html
+++ b/index_es.html
@@ -133,17 +133,17 @@
     </div>
     <img src="logofoto.jpg" alt="Your Image">
     <p style="font-family: 'Montserrat'; font-size: 34px; font-weight: 400; margin-bottom: 2px;">ALEXEY BELOZERTSEV</p>
-    <p style="font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: #AAAAB2; margin-bottom: 2px;">Head doctor and prosthodontist, PhD</p>
+    <p style="font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: #AAAAB2; margin-bottom: 2px;">Médico estomatologo, Jefe de médicos, MD</p>
   </header>
 
   <section>
     <div class="inner-section">
        <h2>SOBRE MÍ</h2>
         <p class="indented">Es un placer verte. Mi nombre es <em>Alexey</em>.</p>
-<p class="indented" style="text-align: justify;">Soy un dentista especializado en odontología ortopédica con <strong>más de 20 años de experiencia</strong>. Tengo un doctorado en medicina. Mi especialidad se encuentra en la prótesis dental estética, incluidos los procedimientos basados en implantes. Utilizo una amplia gama de métodos tanto modernos como clásicos para la prótesis dental, empleando tecnologías con eficacia comprobada y una sólida base científica.</p>
-<p class="indented" style="text-align: justify;">Colaboro con un equipo de especialistas en diversas áreas, que incluyen higiene dental profesional y blanqueamiento dental, odontología terapéutica (tratamiento de conductos), cirugía (cirugía plástica de tejido óseo y encías, colocación de implantes dentales) y ortodoncia (corrección de la mordida con brackets e Invisalign).</p>
-<p class="indented" style="text-align: justify;">En mi práctica, me adhiero a los principios de un diagnóstico minucioso, preparación meticulosa, precisión, estética y confiabilidad. Me acerco a los pacientes con cuidado y respeto, entendiendo que me confían su salud.</p>
-<p class="indented" style="text-align: justify;"><em>Tengo competencia en inglés a nivel B1 y en español en a nivel B2.</em></p>
+<p class="indented" style="text-align: justify;">Soy un médico estomatologo en rehabilitación oral con prótesis conmás de <strong>20 años de experiencia</strong>. Tengo un doctorado en medicina. Mi especialidad se encuentra en la prótesis dental estética, incluidos los procedimientos basados en implantes. Utilizo una amplia gama de métodos tanto modernos como clásicos para la prótesis dental, empleando tecnologías con eficacia comprobada y una solida base científica.</p>
+<p class="indented" style="text-align: justify;">Colaboro con un equipo de especialistas en diversas áreas, que incluyen higiene dental profesional y blanqueamiento dental, odontología terapéutica (endodoncia), cirugía (cirugía plástica de tejido óseo y encías, colocación de implantes dentales) y ortodoncia.</p>
+<p class="indented" style="text-align: justify;">En mi práctica, me adhiero a los principios de un diagnóstico minucioso, preparación meticulosa, precisión, estetica y confiabilidad. Me acerco a los pacientes con cuidado y respeto, entendiendo que me confían su salud.</p>
+<p class="indented" style="text-align: justify;"><em>Tengo competencia en inglés a nivel B1 y en español en a nivel B1-B2.</em></p>
     </div>
     </section>
 
@@ -154,26 +154,25 @@
   <tr>
     <td valign="top">2003 - 2023</td>
     <td>
-      <strong>Jefe de médicos y dentista ortopédico</strong>
-      <p>Atri-Dent LLC, Moscú, Rusia</p>
+      <strong>Jefe de médicos y médico estomatologo</strong>
+      <p>La clínica privada «Atri-Dent LLC», Moscú, Rusia</p>
       Carillas eMAX, tanto terminadas como completas (360 carillas)<br>
 Carillas refractarias Noritake<br>
-Incrustaciones y onlays cerámicos eMAX ("inley," "onley," "overley," y "pinley")<br>
+Cerámicos eMAX (inley, onley, overley, pinley, coronas)<br>
 Coronas y puentes cerámicos eMAX (coronas semi y coronas completas)<br>
 Óxido de circonio: incrustaciones de postes cultados, coronas y prótesis de puente<br>
 Coronas y prótesis de puente metal-cerámicas clásicas<br>
 Prótesis fijas y removibles sobre implantes dentales<br>
-Diversas prótesis de sujeción: con cierres, clásicas, de férula<br>
 Prótesis removibles parciales y completas, incluidas aquellas con soporte en implantes<br>
-Prótesis removibles condicionalmente sobre implantes según los sistemas "All on 4" y "All on 6"<br>
-Prótesis temporales y permanentes sobre implantes Astra Tech, MIS, Alpha Bio, Xive<br>
+Prótesis removibles condicionalmente sobre implantes según los sistemas "All on 4"<br>
+Prótesis temporales y permanentes sobre implantes Astra Tech, MIS, Alpha Bio, Xive, Ankylos<br>
     </td>
   </tr>
   <tr>
     <td valign="top">2001 - 2003</td>
     <td>
-      <strong>Dentista ortopédico</strong>
-      <p>Academia Médica Estatal de Chita</p>
+      <strong>Médico estomatologo, docente del departamento de prótesis</strong>
+      <p>La Universidad Medica Publica de Chita, Rusia</p>
     </td>
   </tr>
 </table>
