--- a/index_es.html
+++ b/index_es.html
@@ -164,7 +164,7 @@ Coronas y puentes cerámicos eMAX (coronas semi y coronas completas)<br>
 Coronas y prótesis de puente metal-cerámicas clásicas<br>
 Prótesis fijas y removibles sobre implantes dentales<br>
 Prótesis removibles parciales y completas, incluidas aquellas con soporte en implantes<br>
-Prótesis removibles condicionalmente sobre implantes según los sistemas "All on 4"<br>
+Prótesis removibles condicionalmente sobre implantes según los sistemas «All on 4»<br>
 Prótesis temporales y permanentes sobre implantes Astra Tech, MIS, Alpha Bio, Xive, Ankylos<br>
     </td>
   </tr>
