--- a/index_es.html
+++ b/index_es.html
@@ -133,14 +133,14 @@
     </div>
     <img src="logofoto.jpg" alt="Your Image">
     <p style="font-family: 'Montserrat'; font-size: 34px; font-weight: 400; margin-bottom: 2px;">ALEXEY BELOZERTSEV</p>
-    <p style="font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: #AAAAB2; margin-bottom: 2px;">Médico estomatologo, prostodoncista, MD</p>
+    <p style="font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: #AAAAB2; margin-bottom: 2px;">Médico estomatólogo, Prostodoncista, MD</p>
   </header>
 
   <section>
     <div class="inner-section">
        <h2>SOBRE MÍ</h2>
         <p class="indented">Es un placer verte. Mi nombre es <em>Alexey</em>.</p>
-<p class="indented" style="text-align: justify;">Soy un médico estomatologo especializado en rehabilitación oral con prótesis conmás de <strong>20 años de experiencia</strong>. Tengo un doctorado en medicina. Mi especialidad se encuentra en la prótesis dental estética, incluidos los procedimientos basados en implantes. Utilizo una amplia gama de métodos tanto modernos como clásicos para la prótesis dental, empleando tecnologías con eficacia comprobada y una solida base científica.</p>
+<p class="indented" style="text-align: justify;">Soy un médico estomatólogo especializado en rehabilitación oral con prótesis con más de <strong>20 años de experiencia</strong>. Tengo un doctorado en medicina. Mi especialidad se encuentra en la prótesis dental estética, incluidos los procedimientos basados en implantes. Utilizo una amplia gama de métodos tanto modernos como clásicos para la prótesis dental, empleando tecnologías con eficacia comprobada y una solida base científica.</p>
 <p class="indented" style="text-align: justify;">Colaboro con un equipo de especialistas en diversas áreas, que incluyen higiene dental profesional y blanqueamiento dental, odontología terapéutica (endodoncia), cirugía (cirugía plástica de tejido óseo y encías, colocación de implantes dentales) y ortodoncia.</p>
 <p class="indented" style="text-align: justify;">En mi práctica, me adhiero a los principios de un diagnóstico minucioso, preparación meticulosa, precisión, estetica y confiabilidad. Me acerco a los pacientes con cuidado y respeto, entendiendo que me confían su salud.</p>
 <p class="indented" style="text-align: justify;"><em>Tengo competencia en inglés a nivel B1 y en español en a nivel B1-B2.</em></p>
@@ -154,7 +154,7 @@
   <tr>
     <td valign="top">2003 - 2023</td>
     <td>
-      <strong>Jefe de médicos y médico estomatologo</strong>
+      <strong>Jefe de médicos y médico estomatólogo, prostodoncista</strong>
       <p>La clínica privada «Atri-Dent LLC», Moscú, Rusia</p>
       Carillas eMAX, tanto terminadas como completas (360 carillas)<br>
 Carillas refractarias Noritake<br>
@@ -171,7 +171,7 @@ Prótesis temporales y permanentes sobre implantes Astra Tech, MIS, Alpha Bio, X
   <tr>
     <td valign="top">2001 - 2003</td>
     <td>
-      <strong>Médico estomatologo, prostodoncista, docente del departamento de prótesis</strong>
+      <strong>Médico estomatólogo, prostodoncista, docente del departamento de prótesis</strong>
       <p>La Universidad Medica Publica de Chita, Rusia</p>
     </td>
   </tr>
